--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "framer-motion": "^11.0.6",
     "next": "14.1.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-intersection-observer": "^9.8.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
